infra/k8s/prod/rbs-backend-monolith-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbs-backend-monolith-prod-deploy
  namespace: robson
  annotations:
    robson.rbx.ia.br/last-rollout: "2025-12-24T11:20:00Z"
  labels:
    app: rbs-backend-monolith-prod-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rbs-backend-monolith-prod-deploy
  template:
    metadata:
      labels:
        app: rbs-backend-monolith-prod-deploy
    spec:
      containers:
      - name: rbs-backend-monolith-prod-deploy
        image: ldamasio/rbs-backend-monolith-prod:sha-b1c8f6a
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "1000Mi"
            cpu: "750m"
          limits:
            memory: "1000Mi"
            cpu: "1500m"
