infra/k8s/prod/rbs-backend-nginx-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbs-backend-nginx-prod-deploy
  namespace: robson
  annotations:
    robson.rbx.ia.br/last-rollout: "2025-12-24T11:20:00Z"
  labels:
    app: rbs-backend-nginx-prod-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rbs-backend-nginx-prod-deploy
  template:
    metadata:
      labels:
        app: rbs-backend-nginx-prod-deploy
    spec:
      containers:
      - name: rbs-backend-nginx-prod-deploy
        image: ldamasio/rbs-backend-nginx-prod:sha-a495527
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
