infra/k8s/prod/rbs-frontend-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbs-frontend-prod-deploy
  namespace: robson
  annotations:
    robson.rbx.ia.br/last-rollout: "2025-12-24T11:20:00Z"
spec:
  selector:
    matchLabels:
      app: rbs-frontend-prod-deploy
  template:
    metadata:
      labels:
        app: rbs-frontend-prod-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "80"
    spec:
      containers:
        - name: rbs-frontend-prod-deploy
          image: ldamasio/rbs-frontend-prod:sha-4698048
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "200Mi"
              cpu: "500m"
