infra/k8s/prod/lda-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lda-prod-svc
  namespace: robson
spec:
  selector:
    app: lda-prod
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
