infra/k8s/prod/rbs-backend-monolith-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbs-backend-monolith-prod-svc
  namespace: robson
spec:
  selector:
    app: rbs-backend-monolith-prod-deploy
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
