infra/k8s/prod/rbs-paradedb-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: paradedb
  namespace: robson
  labels:
    app: rbs-paradedb
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: rbs-paradedb
