infra/k8s/prod/rbs-redis-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: robson
  labels:
    app: rbs-redis-prod
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: rbs-redis-prod
